# statistics

./: .gitignore  Makefile  Pipfile  README.md  causal-inference-in-statistics.ipynb  econometrics-course-problem-sets.ipynb  econometrics-course.ipynb  pyproject.toml
Python/statistics/: Makefile  Pipfile  README.md  econometrics-course.ipynb
ab-testing/: ab_testing.ipynb  ab_testing.md  experiment_effect_viewer.ipynb
data/: nbasal.xls  problemset1.xls  problemset3-1.xls  woolrdrige_card.csv
economics/: causal-inference-in-statistics.ipynb  econometrics-course-problem-sets.ipynb  econometrics-course.ipynb  mostly-harmless-enconometrics.md
economics/econometrics-course-data/: awm19up18.csv
machine-learning/: transformers.ipynb
machine-learning/bandits/: contextual_bandits.md
machine-learning/deep-learning-specialisation/: course-1-slides.ipynb  course-1-slides.slides.html  deep_learning.ipynb  deep_learning_1.ipynb  deep_learning_2.ipynb  deep_learning_3.ipynb  neural_network_with_bn.html  neural_network_with_bn.md  neural_network_with_bn.py
machine-learning/elements-of-statistical-learning/: README.md  chapter-1-2-3-4-5.ipynb  chapter-1-2-3-4.ipynb  chapter-1-2-3.ipynb  chapter-1-2.ipynb  chapter_01.ipynb  hilbert-spaces.ipynb  natural-splines.ipynb
machine-learning/sequential-learning/: behavioural_sequence_transformers.md
